--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,2 +1,7 @@
-add_library(your_project_library STATIC Library.cpp)
-target_include_directories(your_project_library PUBLIC ${CMAKE_SOURCE_DIR}/include)
+add_library(llm_fs_lib STATIC
+        dataset/TextDataset.cpp
+        tokenizer/RegexFastTokenizer.cpp
+)
+
+# Add include directories for the library to use the headers in the "include" folder
+target_include_directories(llm_fs_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
