working training for the encoder + PIMPL

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,5 +1,4 @@
-# This executable is the application
 add_executable(app App.cpp)
 
-# Link the previously created library (llm_fs_lib) to the app
+# Link the library
 target_link_libraries(app PRIVATE llm_fs_lib)
