added loading/saving tokenizers

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(llm_fs_lib STATIC
         dataset/TextDataset.cpp
+        tokenizer/BaseTokenizer.cpp
         tokenizer/RegexFastTokenizer.cpp
         tokenizer/Tokenizer.cpp
         tokenizer/trainer/Trainer.cpp
