--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -6,8 +6,11 @@ add_library(llm_fs_lib STATIC
         tokenizer/trainer/Trainer.cpp
         tokenizer/encoder/Encoder.cpp
         tokenizer/encoder/Encoder.h
-
 )
 
-# Make include/ available for both the library and other targets
-target_include_directories(llm_fs_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(llm_fs_lib PUBLIC
+        ${CMAKE_SOURCE_DIR}/include
+        ${TORCH_INCLUDE_DIRS}
+)
+
+target_link_libraries(llm_fs_lib PUBLIC ${TORCH_LIBRARIES})
