--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -5,12 +5,21 @@ add_library(llm_fs_lib STATIC
         tokenizer/Tokenizer.cpp
         tokenizer/trainer/Trainer.cpp
         tokenizer/encoder/Encoder.cpp
-        tokenizer/encoder/Encoder.h
+        model/dataset/GPTDataset.cpp
 )
 
 target_include_directories(llm_fs_lib PUBLIC
         ${CMAKE_SOURCE_DIR}/include
+        ${CMAKE_SOURCE_DIR}/src/lib
         ${TORCH_INCLUDE_DIRS}
+        ${Python3_INCLUDE_DIRS}
 )
 
-target_link_libraries(llm_fs_lib PUBLIC ${TORCH_LIBRARIES})
+# Fix: Link Python3 and Torch *PUBLICLY* so executables inherit the links
+target_link_libraries(llm_fs_lib PUBLIC
+        ${TORCH_LIBRARIES}
+        ${Python3_LIBRARIES}
+        # Add these if missing symbols persist:
+        ${Python3_LIBRARY}
+        ${Python3_STDLIB}
+)
