fixed tokenizer saving/loading bug

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -19,6 +19,7 @@ target_include_directories(llm_fs_lib PUBLIC
         ${CMAKE_SOURCE_DIR}/src/lib
         ${TORCH_INCLUDE_DIRS}
         ${Python3_INCLUDE_DIRS}
+        nlohmann_json::nlohmann_json
 )
 
 # Fix: Link Python3 and Torch *PUBLICLY* so executables inherit the links
@@ -28,4 +29,5 @@ target_link_libraries(llm_fs_lib PUBLIC
         # Add these if missing symbols persist:
         ${Python3_LIBRARY}
         ${Python3_STDLIB}
+        nlohmann_json::nlohmann_json
 )
